ignore environment files

--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,10 @@ benchmarks/graphs
 
 # ignore additional files using core.excludesFile
 # https://git-scm.com/docs/gitignore
+
+#config
+config.js
+
+#environment variables
+*.env
+environment.*
