--- a/package.json
+++ b/package.json
@@ -6,12 +6,15 @@
     "start": "node ./bin/www"
   },
   "dependencies": {
+    "@adminjs/express": "4.1.0",
     "@azure/cosmos": "^3.15.1",
+    "adminjs": "5.7.3",
     "async": "^3.2.3",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
     "dotenv": "^16.0.0",
     "express": "~4.16.1",
+    "express-formidable": "1.2.0",
     "express-validator": "6.14.0",
     "http-errors": "~1.6.3",
     "mongoose": "^6.2.0",
