--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "dotenv": "^16.0.0",
     "express": "~4.16.1",
     "express-formidable": "1.2.0",
+    "express-session": "1.17.2",
     "express-validator": "6.14.0",
     "http-errors": "~1.6.3",
     "mongoose": "^6.2.0",
